# ComfyUI-BlenderAI-node

./: .gitattributes  .gitignore  .gitmodules  CHANGE_LOG.md  LICENSE  README.md  README_CN.md  README_EN.md  README_FR.md  __init__.py  blender_manifest.toml  datas.py  kclogger.py  mdproc.py  ops.py  preference.py  prop.py  pyproject.toml  timer.py  translation.json  translation.py  translationd.py  ui.py  utils.py
Linker/: __init__.py  linker.py
MultiLineText/: __init__.py  integration.py  old_renderer.py  renderer.py  test  test.cpp  translation.csv  trie copy.py  trie.py  words_collection.py  words_re.py
MultiLineText/tags/: LICENSE
SDNode/: PATH_CFG.json  __init__.py  aiprompt.py  blender_api_server.py  blueprints.py  config.yaml  custom_support.py  manager.py  node_process.py  nodegroup.py  nodes.py  object_info.json  object_info_internal.json  operators.py  pid  rt_tracker.py  test.py  tree.py  utils.py
SDNode/custom_nodes/: cup.py
SDNode/history/: __init__.py
SDNode/plugins/: animatedimageplayer.py  gifplayer.py  imgreader.py
SDNode/websocket/: __init__.py  _abnf.py  _app.py  _cookiejar.py  _core.py  _exceptions.py  _handshake.py  _http.py  _logging.py  _socket.py  _ssl_compat.py  _url.py  _utils.py  _wsdump.py
SDNode/yaml/: a111.yaml  custom.yaml
groups/: MY_Comfy_Workflows
groups/00测试/: 预设.json
groups/常用组件/: 0.json  01图像预览.json  02图像导入.json  03图像保存.json  04图像放大(可设尺寸).json  05图像放大(最大值).json  06超分修复.json  07双向提示词.json  08究极高清修复.json  09提示词抽卡.json
groups/进阶组件/: 图表.json  (+18 more)
hook/: __init__.py  hook.py
translations/: __init__.py  translation.py
(+354 files in other folders)
